--- a/painogen/contact/scss/style.scss
+++ b/painogen/contact/scss/style.scss
@@ -40,15 +40,14 @@ body{
 
 
 
+/*..........header............*/
 
- /*..........header............*/
-
 
   
   
   
   
- * {
+* {
   margin: 0;
   padding: 0; 
 }
@@ -125,24 +124,69 @@ body{
 }
 
 
+.nav-icon_1 {
+  position: relative;
+  right: -2%;
+}
+
 
 /*my styles head*/
 
 header {
   border-bottom: solid 1px $color_5;
-
+ //width: 105%;
   nav{
     
-    background: #fafafa;
+    //background: #fafafa;
   }
+
+  background: #fafafa;
+
+  position: absolute;
+  width: 100%;
+  z-index: 20;
+  top: 0;
+
 }
 
+
+
+
+
+
+
 #headNav{
-  padding-bottom: 34px;
-  padding-top: 28px;
+//  padding-bottom: 34px;
+// padding-top: 28px;
+//height: 100px;
+padding-bottom: 25px;
+ padding-top: 25px;
  
- transition: all 1s linear;
+transition: opacity 1s;
+
+@media only screen and (max-width: 991px) {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
+
+}
+
+
+
+
+.positionFix{
+
+padding-left: 32px;
+margin-left: -15px;
+width: 100%;
+position: fixed;
+z-index: 99999;
+
+
+}
+
+
+
 
 #headMenu{
     
@@ -178,9 +222,9 @@ header {
 
 
 #navbarNav_2{
-    width: 261px;
+    width: 186px;
     position: absolute;
-    right: 5%;
+    right: -2px;
     @media only screen and (max-width: 1147px) {
       
     }
@@ -228,7 +272,6 @@ header {
   }
 
 }
-
 
   
 
@@ -294,7 +337,9 @@ transform: translate3d(0,0,0);
 top: 0;
 }*/
 
-
+#map_block {
+  margin-top: 180px;
+}
 
 #map {
   width: 80%;
@@ -411,28 +456,38 @@ top: 0;
   background: #2b9100;
   padding-top: 40px;
   padding-bottom: 50px;
-  margin-top: 170px;
+  margin-top: 70px;
+  @media only screen and (max-width: 767px) {
+   padding-bottom: 70px;
+  
+   }
 }
 
 #subscribe_section>div {
   max-width:1140px;
-  @media only screen and (max-width: 1211px) {
-    max-width:505px;
+
+  @media only screen and (max-width: 1650px) {
+    width: 1094px;
+  
+   }
+  
+  @media only screen and (max-width: 1300px) {
+    width: 937px;
   
    }
 
-   @media only screen and (max-width: 1200px) {
-    padding-bottom: 100px;
+  @media only screen and (max-width: 1190px) {
+    width:715px;
   
    }
 
-   @media only screen and (max-width: 520px) {
-    max-width:400px;
+   @media only screen and (max-width: 767px) {
+    width: 400px;
   
    }
 
-   @media only screen and (max-width: 450px) {
-    max-width:277px;
+   @media only screen and (max-width: 420px) {
+    max-width: 250px;
   
    }
 
@@ -440,18 +495,27 @@ top: 0;
   margin:0 auto;
   @extend .grid;
   grid-template-columns: 521px auto;
+
   @media only screen and (max-width: 1440px) {
     grid-template-columns: 524px auto;
  }
+
+ /*@media only screen and (max-width: 1200px) {
+    padding-bottom: 100px;
+ }*/
 
  @media only screen and (max-width: 1211px) {
   grid-template-columns: auto;
   grid-row-gap: 40px;
  }
 
- @media only screen and (max-width: 679px) {
-  
+ @media only screen and (max-width: 1300px) {
+  grid-template-columns: auto auto;
 
+ }
+
+ @media only screen and (max-width: 767px) {
+  grid-template-columns: auto;
 
  }
 
@@ -461,9 +525,23 @@ top: 0;
     font-weight: 100;
     letter-spacing: 2px;
 
-    @media only screen and (max-width: 1440px) {
-     font-size: 17px;
+    @media only screen and (max-width: 1650px) {
+      font-size: 19px;
+    
+     }
+
+    @media only screen and (max-width: 1300px) {
+     font-size: 18px;
   }
+
+  @media only screen and (max-width: 1190px) {
+    font-size: 12px;
+ }
+
+ @media only screen and (max-width: 767px) {
+  text-align: left;
+  font-size: 10.6px;
+ }
 
   }
 
@@ -473,9 +551,11 @@ top: 0;
 
     grid-column-gap: 5%;
 
-    @media only screen and (max-width: 1440px) {
-      grid-column-gap: 5%;
+    @media only screen and (max-width: 1300px) {
+      grid-column-gap: 3%;
     }
+
+    
   
     
     a{
@@ -487,6 +567,19 @@ top: 0;
        -o-transition: all .3s linear;
       -webkit-transition: all .3s linear;
       transition: all .3s linear;
+
+      @media only screen and (max-width: 1300px) {
+        font-size: 20px;
+      }
+
+      @media only screen and (max-width: 1190px) {
+        font-size: 15px;
+      }
+
+      @media only screen and (max-width: 420px) {
+        font-size: 12px;
+      }
+    
     }
 
     a:hover {
@@ -509,19 +602,41 @@ top: 0;
   padding-left: 5%;
   border: none;
 
-  @media only screen and (max-width: 1440px) {
-    width: 57%;
-    height: 45px;
-    font-size: 18px;
-    left: 17.9%;
+
+  @media only screen and (max-width: 1650px) {
+    width: 411px;
+    right: 24%;
+    font-size: 16px;
+    height: 46px;
+  }
+
+  @media only screen and (max-width: 1300px) {
+    width: 60%;
+     height: 45px;
+     font-size: 18px;
+      left: 18.5%;
 
   }
 
-  @media only screen and (max-width: 1200px) {
-    width: 75%;
-  height: 45px;
-  font-size: 18px;
-  left: 0;
+  @media only screen and (max-width: 1190px) {
+    width: 60%;
+    height: 40px;
+    font-size: 16px;
+   
+
+  }
+
+  @media only screen and (max-width: 767px) {
+    left:0;
+   
+
+  }
+
+  @media only screen and (max-width: 420px) {
+    width: 74%;
+    height: 34px;
+    font-size: 11px;
+   
 
   }
 
@@ -537,178 +652,395 @@ top: 0;
   @include fontsStyle($font_6,24.11px,$color_6);
   background-color: #2b9100;
 
-  @media only screen and (max-width: 1440px) {
-    width: 26%;
-  height: 45px;
-  font-size: 19px;
-  right: 0;
+  @media only screen and (max-width: 1650px) {
+    width: 173px;
+    height: 47px;
   }
 
-  @media only screen and (max-width: 1200px) {
-    width: 27%;
-  height: 45px;
-  font-size: 19px;
-  right: 0%;
+  @media only screen and (max-width: 1300px) {
+    width:145px;
+    height: 45px;
+  font-size: 18px;
+  }
+
+  @media only screen and (max-width: 1190px) {
+    width: 115px;
+  height: 40px;
+  font-size: 16px;
+  }
+
+
+  @media only screen and (max-width: 767px) {
+    right: 13%;
+
+  }
+
+  @media only screen and (max-width: 420px) {
+    width: 82px;
+    height: 34px;
+    font-size: 11px;
+    right: 0;;
+
   }
 
 }
-
-
-
 
 
 
 #subscribe>h2:nth-child(1){
   text-align: right;
 }
- /*...........F O O T E R ...............*/
 
- footer{
-  padding-top: 70px;
+@media only screen and (max-width: 767px) {
+  #subscribe>h2:nth-child(1){
+    text-align: left;
+  }
 
-.container{
-  max-width: 1172px;
 }
-  @media only screen and (max-width: 563px) {
-   padding-left: 5%;
-  
-  }
-  background: #f7f9fb;
-  .textfooterCont{
-    margin-top: 25px;
-    @include fontsStyle($font_1,14px,#626262);
-    line-height: 30px;
-    letter-spacing: 1px;
 
-  }
+  /*...........F O O T E R ...............*/
 
-  .par_1_row{
+  footer{
+    padding-top: 70px;
+
+  .container{
+    max-width: 1172px;
     padding-bottom: 60px;
-  }
+    @media only screen and (max-width: 1650px) {
+      width: 1124px;
+     
+     }
 
-  /* Nav footer*/
+     @media only screen and (max-width: 1300px) {
+      width: 967px;
+     
+     }
+
+
+     @media only screen and (max-width: 1190px) {
+      width: 750px;
+     
+     }
+
+
+     @media only screen and (max-width: 767px) {
+      width: 430px;
+     
+     }
+
+     @media only screen and (max-width: 420px) {
+     padding-left: 11%;
+     
+     }
+
+
+
+  }
+   /* @media only screen and (max-width: 563px) {
+     padding-left: 5%;
+    
+    }
+    background: #f7f9fb;
+    .textfooterCont{
+      margin-top: 25px;
+      @include fontsStyle($font_1,14px,#626262);
+      line-height: 30px;
+      letter-spacing: 1px;
+
+    }
+
+
+
+    .par_1_row{
+      padding-bottom: 60px;
+    }
+
+
+
+  */
+
+
+  @media only screen and (max-width: 1920px) {
+    .logoFooter{
+      width: 60%;
+    }
+  
+    .textfooterCont {
+      margin-top: 17px;
+      width: 72%;
+      p{
+    
+        @include fontsStyle($font_1,14px,#626262);
+        line-height: 28px;
+      }
+    }
+   
+   }
+
+
+   @media only screen and (max-width: 1300px) {
+    .logoFooter{
+      width: 73%;
+    }
+  
+    .textfooterCont {
+      margin-top: 15px;
+      width: 100%;
+      p{
+    
+        @include fontsStyle($font_1,14px,#626262);
+        line-height: 28px;
+      }
+    }
+   
+   }
+
+
+  @media only screen and (max-width: 1190px) {
+    .logoFooter{
+      width: 79%;
+    }
+  
+    .textfooterCont {
+      margin-top: 40px;
+      width: 96%;
+      p{
+        font-size: 12px;
+        @include fontsStyle($font_1,12px,#626262);
+        line-height: 25px;
+      }
+    }
+   
+   }
+ 
+
+
+   @media only screen and (max-width:992px) {
+    .logoFooter{
+      width: 15%;
+    }
+  
+    .textfooterCont {
+      margin-top: 25px;
+      width: 40%;
+      
+    }
+   
+   }
+
+
+   @media only screen and (max-width:767px) {
+    .logoFooter{
+      width: 28%;
+    }
+  
+    
+   
+   }
+
+
+    /* Nav footer*/
 
 .style_h3 {
-font-family: "kariaReguliar";
-font-size: 22px;
-color: #3f4345;
-padding: .5rem 1rem;
-text-transform: uppercase;
-letter-spacing: 2px;
-padding-left: 0;
+  font-family: "kariaReguliar";
+  font-size: 22px;
+  color: #3f4345;
+  padding: .5rem 1rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding-left: 0;
+padding-top: 40px;
+  
+  @media only screen and (max-width: 1190px) {
+    font-size: 16px;
+   padding-top: 35px;
+   }
 
 }
 
-  .nav_cotent_footer {
+    .nav_cotent_footer {
+      @extend .grid;
+      grid-template-columns: auto auto auto;
+      
+      @media only screen and (max-width: 563px) {
+        grid-template-columns: auto auto;
+      
+      }
+
+      ul>li>a{
+        @include fontsStyle($font_1,$size_1,#9ca9b1);
+        transition: all .3s linear;
+        padding: .5rem 1rem;
+        
+          padding-left: 0.1rem;
+        
+        
+        &:hover{
+          color: #58595b;
+        }
+
+        @media only screen and (max-width: 1190px) {
+          font-size: 14px;
+          padding-bottom: 0.5rem;
+          padding-top: 0.5rem;
+         }
+      }
+
+    }
+
+
+    /*instagram footer*/
+
+
+    #instagram_block{
+      h3:nth-child(3){
+        
+        margin-top: 63px;
+        text-align: right;
+        padding: 0;
+
+        @media only screen and (max-width: 992px) {
+          text-align: left;
+         
+        }
+      }
+      a:nth-child(4){
+        display: block;
+        text-align: right;
+
+        @media only screen and (max-width: 992px) {
+          text-align: left;
+         
+        }
+      }
+      
+    }
+
+  .instagram_img {
     @extend .grid;
     grid-template-columns: auto auto auto;
-    
-    @media only screen and (max-width: 563px) {
-      grid-template-columns: auto auto;
-    
-    }
-
-    ul>li>a{
-      @include fontsStyle($font_1,$size_1,#9ca9b1);
-      transition: all .3s linear;
-      padding: .5rem 1rem;
-      
-        padding-left: 0.1rem;
-      
-      
-      &:hover{
-        color: #58595b;
-      }
-    }
-
+    grid-column-gap: 0.6vw;
+    grid-row-gap: 1vh;
+   
   }
 
 
-  /*instagram footer*/
 
 
-  #instagram_block{
-    h3:nth-child(3){
-      
-      margin-top: 63px;
-      text-align: right;
-      padding: 0;
-
-      @media only screen and (max-width: 992px) {
-        text-align: left;
-       
-      }
-    }
-    a:nth-child(4){
-      display: block;
-      text-align: right;
-
-      @media only screen and (max-width: 992px) {
-        text-align: left;
-       
-      }
-    }
-    
   }
 
-.instagram_img {
-  @extend .grid;
-  grid-template-columns: auto auto auto;
-  grid-column-gap: 0.6vw;
-  grid-row-gap: 1vh;
  
-}
-
-
-
-
-}
-
-
 /* botton footer part*/
 
 #bottom_footer_block {
-background: #8b99a3;
-padding-top: 40px;
-background-color: $color_6;
-p{
-  a{
-   
-      @include fontsStyle($font_1,$size_7,#727f88);
-      -moz-transition: all .3s linear;
-     -o-transition: all .3s linear;
-     -webkit-transition: all .3s linear;
-     transition: all .3s linear;
-    text-decoration: none;
-    &:hover{
-      color: #2c9146;
+  background: #8b99a3;
+  padding-top: 40px;
+  background-color: $color_6;
+  p{
+    a{
+     
+        @include fontsStyle($font_1,$size_7,#727f88);
+        -moz-transition: all .3s linear;
+       -o-transition: all .3s linear;
+       -webkit-transition: all .3s linear;
+       transition: all .3s linear;
+      text-decoration: none;
+      &:hover{
+        color: #2c9146;
+      }
+
+      @media only screen and (max-width: 1190px) {
+        font-size: 14px;
+        
+       }
+       
+
+       @media only screen and (max-width: 420px) {
+        font-size: 10px;
+        
+       }
     }
+
+    @media only screen and (max-width: 420px) {
+      span{
+        font-size: 10px;
+      }
+     }
+
   }
-}
-p>span{
-  margin: 0 2%;
+  p>span{
+    margin: 0 2%;
+  }
+
+  padding-bottom: 30px;
+
 }
 
-padding-bottom: 30px;
 
-}
+
+@media only screen and (max-width: 1300px) {
+  
+  #last_text_footer {
+    font-size: 13.4px;
+  }
+  
+ }
+
+
+@media only screen and (max-width: 1190px) {
+  
+  #last_text_footer {
+    font-size: 11px;
+  }
+  
+ }
+
+
+ @media only screen and (max-width: 420px) {
+  
+  #last_text_footer {
+    font-size: 9px;
+  }
+ }
+
 /*  bank pay carts*/
 
 #bankCarts {
 
-padding-left: 8.51vw;
-display: grid;
-grid-template-columns: auto auto auto auto auto auto auto;
-a{
-  @include fontsStyle($font_1,2rem,#727f88);
-  margin: 0 2%;
-  transition: all .3s linear;
-  display: block;
-  text-align: right;
-  &:hover{
-    color: #2b9100;
+  padding-left: 8.51vw;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto;
+
+
+  @media only screen and (max-width: 767px) {
+    
+    padding-left: 4%;
+  }
+ 
+
+
+  a{
+    @include fontsStyle($font_1,2rem,#727f88);
+    margin: 0 2%;
+    transition: all .3s linear;
+    display: block;
+    text-align: right;
+    &:hover{
+      color: #2b9100;
+    }
+
+
+    @media only screen and (max-width: 1190px) {
+     font-size: 1.5rem;
+     
+    }
+
+    @media only screen and (max-width: 767px) {
+      text-align: left;
+     
+    }
+   
+
   }
 }
-}
-
 
