--- a/painogen/privat/css/style.css
+++ b/painogen/privat/css/style.css
@@ -23,7 +23,7 @@
 /*...Colors...*/
 /*...sizes...*/
 /*EXTEND */
-.grid, #slider_top, .main_content_top_slider, #img_sliderTop_block, .sizes_part, #qty_delivery_block, .qty_main, #One-time_purchase, #Subscription_purchase, #wishList_pricedrop_block, #soc_icons_form, .img_product, .content_slider_buttom, #subscribe_section > div, #subscribe_section > div .socIcons, footer .nav_cotent_footer, footer .instagram_img {
+.grid, .main_content_top_slider, #img_sliderTop_block, .sizes_part, #qty_delivery_block, .qty_main, #One-time_purchase, #Subscription_purchase, #wishList_pricedrop_block, #soc_icons_form, .img_product, .content_slider_buttom, #subscribe_section > div, #subscribe_section > div .socIcons, footer .nav_cotent_footer, footer .instagram_img {
   display: grid; }
 
 .m_auto {
@@ -65,6 +65,8 @@ body {
   color: #8c8c8c;
   text-decoration: none;
   -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
   transform: rotate(-135deg); }
   .text_style_1:hover {
     color: #2b9100;
@@ -83,8 +85,12 @@ body {
   height: 25px;
   /* margin: 50px auto;*/
   -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer; }
 
@@ -98,8 +104,12 @@ body {
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
   transition: .25s ease-in-out; }
 
 #nav-icon1 span:nth-child(1) {
@@ -114,6 +124,8 @@ body {
 #nav-icon1.open span:nth-child(1) {
   top: 18px;
   -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
   transform: rotate(135deg); }
 
 #nav-icon1.open span:nth-child(2) {
@@ -123,6 +135,8 @@ body {
 #nav-icon1.open span:nth-child(3) {
   top: 18px;
   -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
   transform: rotate(-135deg); }
 
 .nav-icon_1 {
@@ -141,7 +155,6 @@ header {
 #headNav {
   padding-bottom: 25px;
   padding-top: 25px;
-  -webkit-transition: opacity 1s;
   transition: opacity 1s; }
   @media only screen and (max-width: 991px) {
     #headNav {
@@ -197,6 +210,8 @@ header {
   height: 40px;
   border-radius: 50%;
   overflow: auto;
+  -moz-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
   -webkit-transition: all 0.5s linear;
   transition: all 0.5s linear; }
   .headerIconeDiv img {
@@ -205,29 +220,32 @@ header {
     margin-top: 30%; }
   .headerIconeDiv:hover {
     background: #ffffff;
-    -webkit-box-shadow: 0px 0px 11px -2px #686161;
-            box-shadow: 0px 0px 11px -2px #686161; }
+    box-shadow: 0px 0px 11px -2px #686161; }
 
 /*.........Slider top...........*/
 #slider_top {
-  max-width: 1140px;
+  width: 1140px;
   margin-left: auto;
   margin-right: auto;
-  grid-template-columns: 750px 375px;
-  grid-column-gap: 5%;
-  margin-top: 166px; }
-  @media only screen and (max-width: 1200px) {
-    #slider_top {
+  display: grid;
+  grid-template-columns: 656px 375px;
+  grid-column-gap: 3%;
+  margin-top: 90px;
+  /*
+    @media only screen and (max-width: 1200px){
       max-width: 768px;
-      display: block; } }
-  @media only screen and (max-width: 800px) {
-    #slider_top {
+      display: block;
+    }
+  
+    @media only screen and (max-width: 800px){
       max-width: 568px;
-      display: block; } }
-  @media only screen and (max-width: 600px) {
-    #slider_top {
+      display: block;
+    }
+  
+    @media only screen and (max-width: 600px){
       max-width: 300px;
-      display: block; } }
+      display: block;
+    }*/ }
 
 .part_left {
   position: relative; }
@@ -238,74 +256,91 @@ header {
       width: 50px;
       height: 75px;
       background-color: #ababab;
-      top: 327px; }
-      @media only screen and (max-width: 1440px) {
-        .part_left #last_next_img div {
-          top: 244px; } }
-      @media only screen and (max-width: 1200px) {
-        .part_left #last_next_img div {
-          width: 31px;
-          height: 55px;
-          top: 229px; } }
-      @media only screen and (max-width: 600px) {
-        .part_left #last_next_img div {
-          width: 20px;
-          height: 35px;
-          top: 116px; } }
+      top: 249px;
+   /* @media only screen and (max-width: 1440px) {
+      top: 244px;
+    }
+    
+  @media only screen and (max-width: 1200px){
+      width: 31px;
+      height: 55px;
+      top: 229px;
+  }
+
+  @media only screen and (max-width: 600px){
+    width: 20px;
+    height: 35px;
+    top: 116px;
+}*/ }
       .part_left #last_next_img div p {
         font-size: 20px;
         color: #f8f8f8;
         text-align: center;
-        padding-top: 39%; }
-        @media only screen and (max-width: 600px) {
-          .part_left #last_next_img div p {
-            font-size: 16px;
-            padding-top: 26%; } }
+        padding-top: 39%;
+        /* @media only screen and (max-width: 600px){
+           font-size: 16px;
+           padding-top: 26%;
+         }*/ }
     .part_left #last_next_img #lastImg {
-      right: -1%;
+      right: 0%;
+      -moz-transition: all .3s linear;
+      -o-transition: all .3s linear;
       -webkit-transition: all .3s linear;
-      transition: all .3s linear; }
+      transition: all .3s linear;
+      /*@media only screen and (max-width: 1440px) {
+        left:88.5%
+      }
+
+              
+        @media only screen and (max-width: 1200px){
+          left: 88.7%;
+      }
+
+      @media only screen and (max-width: 800px){
+        left: 96%;
+       }
+
+       @media only screen and (max-width: 600px){
+        left: 93%;
+       }*/ }
       .part_left #last_next_img #lastImg:hover {
         background: #2c9146;
         cursor: pointer; }
-      @media only screen and (max-width: 1440px) {
-        .part_left #last_next_img #lastImg {
-          left: 88.5%; } }
-      @media only screen and (max-width: 1200px) {
-        .part_left #last_next_img #lastImg {
-          left: 88.7%; } }
-      @media only screen and (max-width: 800px) {
-        .part_left #last_next_img #lastImg {
-          left: 96%; } }
-      @media only screen and (max-width: 600px) {
-        .part_left #last_next_img #lastImg {
-          left: 93%; } }
     .part_left #last_next_img #nextImg {
-      left: 27%;
+      left: 25%;
+      -moz-transition: all .3s linear;
+      -o-transition: all .3s linear;
       -webkit-transition: all .3s linear;
-      transition: all .3s linear; }
+      transition: all .3s linear;
+     /* @media only screen and (max-width: 1440px) {
+        left:21.5%
+      }
+
+        
+      @media only screen and (max-width: 1200px){
+        left: 20.7%;
+      }
+
+            
+    @media only screen and (max-width: 800px){
+      left: 25.7%;
+    }
+
+    @media only screen and (max-width: 800px){
+      left: 22%;
+     }*/ }
       .part_left #last_next_img #nextImg:hover {
         background: #2c9146;
         cursor: pointer; }
-      @media only screen and (max-width: 1440px) {
-        .part_left #last_next_img #nextImg {
-          left: 21.5%; } }
-      @media only screen and (max-width: 1200px) {
-        .part_left #last_next_img #nextImg {
-          left: 20.7%; } }
-      @media only screen and (max-width: 800px) {
-        .part_left #last_next_img #nextImg {
-          left: 25.7%; } }
-      @media only screen and (max-width: 800px) {
-        .part_left #last_next_img #nextImg {
-          left: 22%; } }
 
 .main_content_top_slider {
-  grid-template-columns: 22.35772357723577% 75.20325203252033%; }
-  @media only screen and (max-width: 1200px) {
-    .main_content_top_slider {
-      grid-template-columns: 13% 70%;
-      grid-column-gap: 2%; } }
+  grid-template-columns: 22.35772357723577% 75.20325203252033%;
+  /*@media only screen and (max-width: 1200px) {
+
+    grid-template-columns: 13% 70%;
+    grid-column-gap: 2%;
+  }
+*/ }
 
 .topSlider_header_link {
   padding-top: 66px;
@@ -315,22 +350,29 @@ header {
 
 .main_content_top_slider {
   display: grid;
-  grid-template-columns: 165px 555px;
-  grid-column-gap: 5%; }
-  @media only screen and (max-width: 1440px) {
-    .main_content_top_slider {
-      grid-template-columns: 120px 555px; } }
-  @media only screen and (max-width: 800px) {
-    .main_content_top_slider {
-      grid-template-columns: 120px 430px; } }
-  @media only screen and (max-width: 600px) {
-    .main_content_top_slider {
-      grid-template-columns: 50px 234px; } }
+  grid-template-columns: 130px 490px;
+  grid-column-gap: 5%;
+  /*
+    @media only screen and (max-width: 1440px) {
+      grid-template-columns: 120px 555px;
+  
+    }
+  
+    @media only screen and (max-width: 800px) {
+      grid-template-columns: 120px 430px;
+  
+    }
+  
+    @media only screen and (max-width: 600px) {
+      grid-template-columns: 50px 234px;
+  
+    }
+  */ }
 
 #buttons_img_sliderTop {
   display: grid;
   grid-template: auto;
-  grid-row-gap: 24px;
+  grid-row-gap: 10px;
  /* div:nth-child(1){
     background-image: url('../img/top_slider/button_img/slide_3.png');
   }
@@ -348,32 +390,37 @@ header {
     
   }*/ }
   #buttons_img_sliderTop .btn_img_sliderTop {
-    width: 165px;
-    height: 165px;
+    width: 100%;
+    height: 130px;
     padding-top: 20px;
     padding-bottom: 20px;
     background: #f5f4f4;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
+  /*@media only screen and (max-width: 1440px) {
+    width: 120px;
+    height: 120px;
+
+  }
+
+  @media only screen and (max-width: 1200px) {
+    width: 100px;
+    height: 100px;
+
+  }
+
+  @media only screen and (max-width: 600px) {
+    width: 50px;
+    height: 50px;
+
+  }*/
     /* img{
        max-width: 34px;
        display: block;
        margin-left: auto;
        margin-right: auto;
      }*/ }
-    @media only screen and (max-width: 1440px) {
-      #buttons_img_sliderTop .btn_img_sliderTop {
-        width: 120px;
-        height: 120px; } }
-    @media only screen and (max-width: 1200px) {
-      #buttons_img_sliderTop .btn_img_sliderTop {
-        width: 100px;
-        height: 100px; } }
-    @media only screen and (max-width: 600px) {
-      #buttons_img_sliderTop .btn_img_sliderTop {
-        width: 50px;
-        height: 50px; } }
 
 #img_sliderTop_block {
   grid-template-columns: 1fr; }
@@ -385,6 +432,8 @@ header {
     background-repeat: no-repeat;
     background-position: center center;
     -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
     /*img{
       width: 55%;
@@ -411,12 +460,17 @@ header {
 @keyframes animationFrames {
   0% {
     opacity: 0;
-    -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px); }
+    transform: translate(0px, 0px); }
   100% {
     opacity: 1;
-    -webkit-transform: translate(1px, 0px);
-            transform: translate(1px, 0px); } }
+    transform: translate(1px, 0px); } }
+@-moz-keyframes animationFrames {
+  0% {
+    opacity: 0;
+    -moz-transform: translate(0px, 0px); }
+  100% {
+    opacity: 1;
+    -moz-transform: translate(1px, 0px); } }
 @-webkit-keyframes animationFrames {
   0% {
     opacity: 0;
@@ -424,6 +478,20 @@ header {
   100% {
     opacity: 1;
     -webkit-transform: translate(1px, 0px); } }
+@-o-keyframes animationFrames {
+  0% {
+    opacity: 0;
+    -o-transform: translate(0px, 0px); }
+  100% {
+    opacity: 1;
+    -o-transform: translate(1px, 0px); } }
+@-ms-keyframes animationFrames {
+  0% {
+    opacity: 0;
+    -ms-transform: translate(0px, 0px); }
+  100% {
+    opacity: 1;
+    -ms-transform: translate(1px, 0px); } }
 .active_slide_top {
   border: solid 3px #99cea7; }
 
@@ -489,17 +557,17 @@ header {
   #add_to_cart_block .top_infoPart_add_to_cart p:nth-child(1) {
     word-spacing: 3px; }
   #add_to_cart_block .top_infoPart_add_to_cart p:nth-child(2) {
-    margin-top: 6px; }
+    margin-top: 2px; }
   #add_to_cart_block .top_infoPart_add_to_cart p:nth-child(3) {
-    margin-top: 12px;
+    margin-top: 7px;
     font-size: 18px; }
   #add_to_cart_block .top_infoPart_add_to_cart p:nth-child(4) {
-    margin-top: 18px; }
+    margin-top: 6px; }
     #add_to_cart_block .top_infoPart_add_to_cart p:nth-child(4) .spanPrice {
       margin-left: 7%;
       margin-right: 7%; }
   #add_to_cart_block .top_infoPart_add_to_cart p:nth-child(5) {
-    margin-top: 15px;
+    margin-top: 5px;
     text-transform: uppercase; }
     #add_to_cart_block .top_infoPart_add_to_cart p:nth-child(5) button {
       width: 101px;
@@ -551,10 +619,7 @@ header {
   font-family: "montserratRegular";
   font-size: 13px;
   color: #575153;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
   padding-left: 30px; }
 
 .radio_container input {
@@ -588,8 +653,7 @@ header {
   border-radius: 50%;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%); }
 
 /*................. QTY and Delivery Every block ............*/
 #qty_delivery_block {
@@ -597,7 +661,7 @@ header {
   grid-column-gap: 8%; }
 
 #qty p {
-  margin-top: 29px;
+  margin-top: 13px;
   margin-bottom: 11px;
   font-family: "montserratRegular";
   font-size: 13px;
@@ -617,6 +681,7 @@ header {
   background: #f8f8f8;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -643,7 +708,7 @@ input#number {
   margin: 0; }
 
 .deivery_p {
-  margin-top: 29px;
+  margin-top: 13px;
   margin-bottom: 11px; }
 
 /*...... purchase ......*/
@@ -651,7 +716,7 @@ input#number {
   #purchase_block {
     width: 70%; } }
 #purchase_block {
-  margin-top: 35px; }
+  margin-top: 20px; }
 
 .purchase_input {
   padding-top: 0; }
@@ -678,7 +743,7 @@ input#number {
 #wishList_pricedrop_block {
   grid-template-columns: 124px 165px;
   grid-column-gap: 8%;
-  margin-top: 30px; }
+  margin-top: 11px; }
   #wishList_pricedrop_block button {
     background: #e8e8e8;
     border-color: #a8a8a8;
@@ -689,6 +754,8 @@ input#number {
     width: 100%;
     border-width: 1px;
     -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out; }
     #wishList_pricedrop_block button:hover {
       background: #41b115;
@@ -710,6 +777,8 @@ input#number {
     width: 167px;
     border-width: 1px;
     -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
     background: #41b115;
     color: #ffffff;
@@ -717,7 +786,7 @@ input#number {
 
 /*.................soc ions ..............*/
 #soc_icons_form {
-  margin-top: 52px;
+  margin-top: 33px;
   grid-template-columns: 20px 20px 20px 20px 20px 20px;
   grid-column-gap: 3%; }
   #soc_icons_form a {
@@ -725,6 +794,8 @@ input#number {
     font-size: 20px;
     color: #c6c6c6;
     -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out; }
     #soc_icons_form a:hover {
       color: #41b115; }
@@ -732,12 +803,12 @@ input#number {
 /*............ Text about mexico ...........*/
 #text_mexico {
   width: 311px;
-  margin-top: 30px; }
+  margin-top: 0px; }
   #text_mexico p {
     font-family: "kariaReguliar";
     font-size: 12px;
     color: #a8a8a8;
-    line-height: 20px; }
+    line-height: 8px; }
 
 /*........... product_content ...........*/
 #feature {
@@ -909,6 +980,8 @@ input#number {
   height: 50px;
   border-radius: 50%;
   -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
   background-color: #c3c4c3;
   margin-top: 118px; }
@@ -1004,6 +1077,7 @@ input#number {
       font-size: 25px;
       color: #ffffff;
       moz-transition: all .3s linear;
+      -o-transition: all .3s linear;
       -webkit-transition: all .3s linear;
       transition: all .3s linear; }
       @media only screen and (max-width: 1300px) {
@@ -1064,8 +1138,7 @@ input#number {
   border-radius: .50rem;
   position: absolute;
   right: 0%;
-  -webkit-box-shadow: 0px 0px 13px 0px #1b1919;
-          box-shadow: 0px 0px 13px 0px #1b1919;
+  box-shadow: 0px 0px 13px 0px #1b1919;
   font-family: "kariaitali";
   font-size: 24.11px;
   color: #ffffff;
@@ -1210,7 +1283,6 @@ footer {
       font-family: "kariaReguliar";
       font-size: 20px;
       color: #9ca9b1;
-      -webkit-transition: all .3s linear;
       transition: all .3s linear;
       padding: .5rem 1rem;
       padding-left: 0.1rem; }
@@ -1249,6 +1321,8 @@ footer {
     font-family: "kariaReguliar";
     font-size: 16px;
     color: #727f88;
+    -moz-transition: all .3s linear;
+    -o-transition: all .3s linear;
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
     text-decoration: none; }
@@ -1288,7 +1362,6 @@ footer {
     font-size: 2rem;
     color: #727f88;
     margin: 0 2%;
-    -webkit-transition: all .3s linear;
     transition: all .3s linear;
     display: block;
     text-align: right; }
@@ -1300,4 +1373,5 @@ footer {
     @media only screen and (max-width: 767px) {
       #bankCarts a {
         text-align: left; } }
+
 /*# sourceMappingURL=style.css.map */
